# docs/swagger.yaml
@@ -1,4 +1,29 @@
 definitions:
+  reqmodel.CreateDiscount:
+    properties:
+      end_date:
+        type: string
+      is_active:
+        type: boolean
+      name:
+        type: string
+      start_date:
+        type: string
+      target:
+        type: string
+      type:
+        type: string
+      value:
+        type: number
+    required:
+    - end_date
+    - is_active
+    - name
+    - start_date
+    - target
+    - type
+    - value
+    type: object
   reqmodel.CreateDiscountProductTarget:
     properties:
       discount_id:
@@ -15,15 +40,12 @@ definitions:
         type: string
       target_id:
         type: string
-      target_type:
-        type: string
       total_discount:
         type: number
     required:
     - discount_id
     - is_active
     - target_id
-    - target_type
     type: object
   reqmodel.CreatePost:
     properties:
@@ -37,6 +59,23 @@ definitions:
     - content
     - is_active
     - title
+    type: object
+  reqmodel.UpdateDiscount:
+    properties:
+      end_date:
+        type: string
+      is_active:
+        type: boolean
+      name:
+        type: string
+      start_date:
+        type: string
+      target:
+        type: string
+      type:
+        type: string
+      value:
+        type: number
     type: object
   reqmodel.UpdateDiscountProductTarget:
     properties:
@@ -54,15 +93,12 @@ definitions:
         type: string
       target_id:
         type: string
-      target_type:
-        type: string
       total_discount:
         type: number
     required:
     - discount_id
     - is_active
     - target_id
-    - target_type
     type: object
   reqmodel.UpdatePost:
     properties:
@@ -133,6 +169,82 @@ info:
   title: Template Service Auth
   version: "1.0"
 paths:
+  /ndi/discount:
+    get:
+      description: Get all discounts
+      parameters:
+      - description: Search keyword
+        in: query
+        name: search
+        type: string
+      - description: Page Number
+        in: query
+        name: page
+        type: integer
+      - description: Page Size
+        in: query
+        name: size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Discounts retrieved successfully
+          schema:
+            $ref: '#/definitions/resmodel.DatasResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+        "404":
+          description: Discounts not found
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+      security:
+      - ApiKeyAuth: []
+      summary: List Discount
+      tags:
+      - Discount
+    post:
+      consumes:
+      - application/json
+      description: Create a new discount
+      parameters:
+      - description: User ID to check
+        in: header
+        name: X-Auth-User-Id
+        required: true
+        type: string
+      - description: Create discount
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/reqmodel.CreateDiscount'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Discount created
+          schema:
+            $ref: '#/definitions/resmodel.NoDataResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+      security:
+      - ApiKeyAuth: []
+      summary: Create Discount
+      tags:
+      - Discount
   /ndi/discount-product:
     get:
       description: Get all discount product targets
@@ -318,6 +430,115 @@ paths:
       summary: Update Discount Product Target
       tags:
       - Discount Product Target
+  /ndi/discount/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a discount
+      parameters:
+      - description: User ID to check
+        in: header
+        name: X-Auth-User-Id
+        required: true
+        type: string
+      - description: Discount ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Discount deleted
+          schema:
+            $ref: '#/definitions/resmodel.NoDataResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete Discount
+      tags:
+      - Discount
+    get:
+      description: Get a discount by its ID
+      parameters:
+      - description: Discount ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Discount retrieved successfully
+          schema:
+            $ref: '#/definitions/resmodel.DataResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+        "404":
+          description: Discount not found
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+      security:
+      - ApiKeyAuth: []
+      summary: Get Discount By ID
+      tags:
+      - Discount
+    put:
+      consumes:
+      - application/json
+      description: Update an existing discount
+      parameters:
+      - description: User ID to check
+        in: header
+        name: X-Auth-User-Id
+        required: true
+        type: string
+      - description: Discount ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Update discount
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/reqmodel.UpdateDiscount'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Discount updated
+          schema:
+            $ref: '#/definitions/resmodel.NoDataResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+      security:
+      - ApiKeyAuth: []
+      summary: Update Discount
+      tags:
+      - Discount
   /ndi/post:
     get:
       description: Mendapatkan seluruh post
